# ExpertLens

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  expertlens_hackathon_master_plan.md  firestore.indexes.json  official_overview.txt  official_rules.txt  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
agent/memory/: summarize.py
agent/prompts/: base.py
agent/prompts/templates/: affinity.py  blender.py  system.py  unreal.py
agent/runtime/: agent.py
agent/tools/: knowledge.py  preferences.py
app/api/: auth.py  config.py  main.py  rate_limit.py
app/api/db/: coach_repo.py  (+5 more)
app/web/: .dockerignore  Dockerfile  biome.json  next.config.ts  package.json  playwright.config.ts  playwright.prod.config.ts
data/coach_profiles/: affinity_photo.json  blender.json  fusion.json  unreal_engine.json  zbrush.json
demo/: architecture.drawio  blog_post.md  capture_screenshots.ts  deployment_recording_notes.md  devpost_submission.md  expertlens-architecture.drawio  video_script.md
demo/slides/: index.html  script.md
demo/video/: generate-voiceover.py  package.json  tsconfig.json
infra/: cloudbuild.yaml  deploy.sh
infra/terraform/: artifact_registry.tf  cloud_run.tf  cloudbuild.tf  firestore.tf  iam.tf  main.tf  outputs.tf  secret_manager.tf  storage.tf  variables.tf
scripts/: manual_test_live_connection.py  manual_test_session_resumption.py  seed_firestore.py  seed_test_user.py  test_live_connection.py  test_session_resumption.py
tests/: conftest.py  test_auth.py  test_coaches.py  test_knowledge_builder.py
(+95 files in other folders)
